--- a/catch-of-the-day/src/css/style.css
+++ b/catch-of-the-day/src/css/style.css
@@ -1,5 +1,17 @@
 .order-enter {
-  background: #f00;
+  -webkit-transition: all 0.5s;
+  transition: all 0.5s;
+  -webkit-transform: translateX(-120%);
+          transform: translateX(-120%);
+  max-height: 0;
+  padding: 0 !important;
+}
+.order-enter.order-enter-active {
+  background: #00f;
+  max-height: 60px;
+  padding: 2rem 0 !important;
+  -webkit-transform: translateX(0);
+          transform: translateX(0);
 }
 @font-face {
   font-family: "haymakerregular";
